--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Felipe Game</title>
 </head>
 <body>
-  jfjfjhfjhfjhfjfjfjjffjf  
+  <nav>
+    <ul>
+        <li>
+            <a>Sobre mim</a>
+        </li><li>
+            <a>projetos</a>
+        </li><li>
+            <a>contato</a>
+        </li>
+    </ul>
+  </nav>
 </body>
 </html>
