--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <nav>
     <ul>
         <li>
-            <a>Sobre mim</a>
+            <a href="index.html">Sobre mim</a>
         </li><li>
-            <a>projetos</a>
+            <a href="project.html">projetos</a>
         </li><li>
-            <a>contato</a>
+            <a href="contact.html">contato</a>
         </li>
     </ul>
   </nav>
