--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
   
   <header>
-    <img src="./img/mobile legends.png"></img>
+    <img src="./img/download (1).jpeg"></img>
   </header>
 </body>
 </html>
