--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </nav>
   
   <header>
-    <img src="./img/download (1).jpeg"></img>
+    <div>
+        <img src="./img/download (1).jpeg"></img>
+    </div>
   </header>
 </body>
 </html>
