--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </nav>
   
   <header>
-    <div>
+    <div class="center">
         <img src="./img/download (1).jpeg"></img>
     </div>
   </header>
