--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div class="center">
         <img src="./img/download (1).jpeg"></img>
     </div>
+    <h1>MOBILE LEGENDS</h1>
+    <h2>Heróis lendarios de mobile legends: Escolha o Seu Campeão</h2>
   </header>
 </body>
 </html>
