--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
     <h1>MOBILE LEGENDS</h1>
     <h2>Heróis lendarios de mobile legends: Escolha o Seu Campeão</h2>
   </header>
+
+  <main>
+    <section>
+        <h3>Sobre Mim</h3>
+        <p>
+            
+        </p>
+    </section>
+  </main>
 </body>
 </html>
