--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
     <section>
         <h3>Sobre Mim</h3>
         <p>
-            
+          Tal como em todos os games MOBA, você vai ter uma função específica no seu time durante cada partida. Por isso, é útil que você conheça cada uma delas para poder escolher o Herói mais adequado ao seu estilo de jogo.
+
+          Tank: esses Heróis são os primeiros a entrar em batalha, protegendo, assim, os seus aliados. A sua vida e resistência são normalmente altas e eles usufruem também de habilidades que diminuem o dano sofrido.
+          Soldado: especialistas em causar dano físico no corpo-a-corpo, esses Heróis têm de chegar perto dos inimigos para terem sucesso. Por isso, eles têm acesso a algumas resistências e a habilidades que aumentam o seu dano causado.
+          Assassino: os Assassinos têm habilidades mortíferas, mas com tempos de recarregamento alto, ou seja, eles são especialistas em causar dano massivo rápido fugindo logo em seguida.
+          Mago: esses Heróis atacam com magia à distância e as suas habilidades melhoram com a quantidade do seu poder mágico. Os Magos são bons ficando atrás das linhas de defesa, jogando os seus feitiços nos inimigos.
+          Atirador: os Atiradores causam dano físico à distância e usufruem de ataques automáticos muito rápidos e poderosos.
+          Suporte: esses Heróis ajudam os seus aliados ao curá-los e ao atordoar e abrandar os inimigos. Sozinhos não são uma ameaça, mas junto com a equipe eles se tornam uma força muito poderosa.
         </p>
     </section>
   </main>
