--- a/index.html
+++ b/index.html
@@ -39,6 +39,41 @@
           Mago: esses Heróis atacam com magia à distância e as suas habilidades melhoram com a quantidade do seu poder mágico. Os Magos são bons ficando atrás das linhas de defesa, jogando os seus feitiços nos inimigos.
           Atirador: os Atiradores causam dano físico à distância e usufruem de ataques automáticos muito rápidos e poderosos.
           Suporte: esses Heróis ajudam os seus aliados ao curá-los e ao atordoar e abrandar os inimigos. Sozinhos não são uma ameaça, mas junto com a equipe eles se tornam uma força muito poderosa.
+
+          2. Aproveite a rotação de Heróis
+
+          Em Mobile Legends: Bang Bang, você tem um conjunto variado de personagens para escolher. É normal que, no início, apenas poucos Heróis estejam disponíveis, mas rapidamente você junta gemas ou pontos suficientes para liberar os outros.
+        
+          3. Escolha bem o seu conjunto de Emblemas
+
+          Todos os Heróis devem escolher um conjunto de emblemas para melhorar os seus atributos e habilidades. Você não vai ter acesso a todas essas runas logo quando começar o game, mas ao upar, vai liberar novas seleções. Por isso, é fundamental escolher um conjunto que complemente bem o seu Herói e as suas habilidades.
+
+          4. Otimize seus equipamentos
+
+          Embora o jogo já sugira algumas builds recomendadas para cada personagem, sempre procure guias na internet (tipo ESSE ou ESSE AQUI) para conhecer as melhores combinações de itens. Essas builds variam muito não só de acordo com o herói mas também com o seu estilo de jogo.
+
+Por exemplo, se você for um jogador agressivo, não fique preso às builds recomendadas pelo jogo e procure os melhores itens para aumentar seu dano.
+
+Você pode criar suas próprias builds e fixá-las para os itens aparecerem automaticamente para compra durante as partidas. Para isso, no menu principal, vá até a aba “Preparação” e depois “Equipamentos”. Clique nas opções de editar e coloque os itens que quiser.
+
+5. Saiba que habilidades dão certo com o seu Herói
+
+Mobile Legends: Bang Bang permite que você escolha uma habilidade que queira utilizar no início de cada partida. Na verdade, as habilidades funcionam como os conjuntos de emblemas. Além de cada uma ser desenhada especificamente para um dos Heróis, você pode fazer a sua escolha antes de cada partida.
+
+6. Se especialize em poucos heróis
+
+Mobile Legends conta com 78 heróis. É comum que jogadores novos busquem explorar o máximo de heróis possíveis na busca dos seus favoritos. Até aí tudo bem.
+
+Acontece que alguns jogadores continuam jogando com muitos heróis por muito tempo e acabam não se especializando em nenhum. Lembre-se que conforme você avança de elo as partidas ficam bem mais difíceis e você não vai chegar longe enquanto não for um especialista em alguns heróis.
+
+Acelere seu processo de escolha se perguntando:
+
+Eu prefiro quero corpo a corpo ou distância?
+Eu prefiro dar dano, dar suporte ou ser tank?
+Eu prefiro passar mais tempo na jungle ou nas trilhas?
+Essas são as perguntas básicas que você precisa responder para escolher seus heróis. Claro, é recomendável que você aprenda a jogar em todas as funções do jogo mas foque em poucos personagens.
+
+
         </p>
     </section>
   </main>
