--- a/index.html
+++ b/index.html
@@ -77,5 +77,11 @@ Essas são as perguntas básicas que você precisa responder para escolher seus 
         </p>
     </section>
   </main>
+
+  <footer>
+    <a>
+      
+    </a>
+  </footer>
 </body>
 </html>
